[package]
name = "rgb-deepmae-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = {version="0.3", features=["cuda"]}
candle-nn = {verion="0.3", features=["cuda"]}
# optimisers = { git = "https://github.com/KGrewal1/optimisers.git", version = "0.1.0" }
image = "0.24"
walkdir = "2.4"
anyhow = "1"
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
log4rs = "1"
chrono = "0.4"
intel-mkl-src = "0.8"
clap = { version = "4.4.7", features = ["derive"] }

# [features]
# cuda = ["candle-nn/cuda", "candle-core/cuda"]
